# CarInsuranceDataGenerator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: linter-and-tests.yml  ruff-linter.yml
src/: car.py  fake_data.py  insurance.py  main.py  owner.py  policy_number.py  singleton.py
tests/: test_car.py  test_endpoints.py  test_generate_fake_data.py  test_insurance.py  test_owner.py  test_policy_number.py  test_root_endpoint.py  test_singleton.py
